--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Joel Philip BInoy</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Joel Philip Binoy</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
-    <h1 >Joel Philip Binoy</h1>
-    <p>Undergraduate Student Of RSET, Kochi</p>
+    <h1>Joel Philip Binoy</h1>
+    <p>B.Tech Undergraduate under Artificial Intelligence and Data Science </p>
   </header>
 
-  <section>
-    <h2>Projects</h2>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>A 3rd year Student at Rajagiri School Of Engineering And Technology, Kakkanad,Kochi</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
     <ul>
-      <li><strong>Robotic Arm Control</strong> – Inverse Kinematics with Python</li>
-      <li><strong>Custom Linux Distro</strong> – Tweaked Archcraft with Hyprland</li>
+      <l1>Experience in Java,Python,C,SQL</l1>
+      <li>Exposed to the basics of IOT (ESP32 ,ESP32 sensors, Arduino-ide)</li>
+      <li>Exposed To Android Mobile App Development(Android Studio, Flutter)</li>
+      <li>Basics Of Blender software</li>
     </ul>
   </section>
 
-  <section>
-    <h2>Academic Qualifications</h2>
-    <ol>
-        <li><p>Secondary Education from Indian Community School, Kuwait</p></li>
-        <li><p>Higher Secondary Education from Indian Community School Kuwait</p></li>
-        <li><p>B.Tech Undergraduate Degree on Artificial Intelligence And Data Science from RSET,Kochi</p></li>
-    </ol>
-
+  <section id="education">
+    <h2>Education</h2>
+    <p></p>
   </section>
-  <section>
+
+ <!-- <section id="experience">
+    <h2>Experience</h2>
+    <div class="job">
+      <h3> Job Title at Company </h3>
+      <p> Timeline & brief description of your responsibilities or accomplishments </p>
+    </div>
+    Duplicate .job for additional roles 
+  </section>-->
+
+
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3><!-- Project Title --></h3>
+      <p><!-- Short description of the project and technologies used. --></p>
+      <a href="#"><!-- Link to demo or GitHub --></a>
+    </div>
+    <!-- Add more .project blocks as desired -->
+  </section>
+
+  <section id="certifications">
+    <h2>Certifications</h2>
+    <ul>
+      <!-- <li>Certificate Name - Issuer</li> -->
+    </ul>
+  </section>
+
+  <section id="achievements">
+    <h2>Achievements</h2>
+    <ul>
+      <!-- <li>Hackathon Winner, IEEE CodeSprint</li> -->
+    </ul>
+  </section>
+
+  <section id="contact">
     <h2>Contact</h2>
-    <p><strong>Email: </strong>joelmammoodan@gmail.com    </p>
-    <p><strong>Address: </strong>Mammoottil House, Pidavoor P.O. Pathanapuram , Kollam, Kerala </p>
+    <p>Email:joelmammoodan@gmail.com</p>
+   
   </section>
 
   <footer>
-    <p>© 2025 Slick. All rights reserved.</p>
+    <p>&copy; Joel Philip Binoy • 2025 • Kochi</p>
   </footer>
+
 </body>
 </html>
