--- a/index.html
+++ b/index.html
@@ -1,82 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Joel Philip Binoy</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-  <header>
-    <h1>Joel Philip Binoy</h1>
-    <p>B.Tech Undergraduate under Artificial Intelligence and Data Science </p>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>A 3rd year Student at Rajagiri School Of Engineering And Technology, Kakkanad,Kochi</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <l1>Experience in Java,Python,C,SQL</l1>
-      <li>Exposed to the basics of IOT (ESP32 ,ESP32 sensors, Arduino-ide)</li>
-      <li>Exposed To Android Mobile App Development(Android Studio, Flutter)</li>
-      <li>Basics Of Blender software</li>
-    </ul>
-  </section>
-
-  <section id="education">
-    <h2>Education</h2>
-    <p></p>
-  </section>
-
- <!-- <section id="experience">
-    <h2>Experience</h2>
-    <div class="job">
-      <h3> Job Title at Company </h3>
-      <p> Timeline & brief description of your responsibilities or accomplishments </p>
-    </div>
-    Duplicate .job for additional roles 
-  </section>-->
-
-
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3><!-- Project Title --></h3>
-      <p><!-- Short description of the project and technologies used. --></p>
-      <a href="#"><!-- Link to demo or GitHub --></a>
-    </div>
-    <!-- Add more .project blocks as desired -->
-  </section>
-
-  <section id="certifications">
-    <h2>Certifications</h2>
-    <ul>
-      <!-- <li>Certificate Name - Issuer</li> -->
-    </ul>
-  </section>
-
-  <section id="achievements">
-    <h2>Achievements</h2>
-    <ul>
-      <!-- <li>Hackathon Winner, IEEE CodeSprint</li> -->
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email:joelmammoodan@gmail.com</p>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Home</title>
    
-  </section>
+   </head>
 
-  <footer>
-    <p>&copy; Joel Philip Binoy • 2025 • Kochi</p>
-  </footer>
-
-</body>
+  <body>
+    <nav class="navabar">
+      <ul class="Links">
+        <l1><a href='index.html'>Home</a></l1>
+        <l1><a href="pages/profile.html">Profile</a></l1>
+        <li><a href='pages/projects.html'>Projects</a></li>
+        <li><a href='pages\contact.html'>Contact</a></li>
+      </ul>
+    </nav>
+      <header>
+        <h1>Hello There</h1>
+        <h2>I'm Joel Philip Binoy</h2>
+        <p align="center">B.Tech Undergraduate under Artificial Intelligence and Data Science</p>
+        <a class="btn" href="pages/projects.html" >View My Work</a>
+      </header>
+      <section>
+        <h1>Section</h1>
+        <p>lskdndehvbjsdnkjhfbhjfdbknjkgvbnfkndvf dfhjdsjdjdfgvbkfdnfdhfvhdfvbjdfvnjk</p>
+      </section>
+      <footer>
+        <h1>Footer</h1>
+      </footer>
+      
+  </body>
 </html>
