--- a/pages/wallaper.html
+++ b/pages/wallaper.html
@@ -8,10 +8,10 @@
     <body>
     <nav class="navbar">
       
-        <a class='NavItemsRight' href='../index.html'>Home</a></l1>
-        <a class="NavItemsRight" href="../pages/profile.html">Profile</a></l1>
-        <a class="NavItemsRight" href='../pages/projects.html'>Projects</a></li>
-        <a class='NavItemsRight' href='../pages/contact.html'>Contact</a></li>
+        <a class='NavItemsRight' href='../index.html'>Home</a>
+        <a class="NavItemsRight" href="../pages/profile.html">Profile</a>
+        <a class="NavItemsRight" href='../pages/projects.html'>Projects</a>
+        <a class='NavItemsRight' href='../pages/contact.html'>Contact</a>
       
     </nav>
 
