--- a/pages/education_technical.html
+++ b/pages/education_technical.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="../styles/style.css" />
-  <title>Skills</title>
-  
-</head>
-<body>
-    <nav class="navabar">
-      <ul class="Links">
-        <l1><a href='../index.html'>Home</a></l1>
-        <l1><a href="../pages/profile.html">Profile</a></l1>
-        <li><a href='../pages/projects.html'>Projects</a></li>
-        <li><a href='../pages\contact.html'>Contact</a></li>
-      </ul>
+<html>
+    <head>
+        <title>LampPost</title>
+        <script src="../scripts/script.js"></script>
+        <link rel="stylesheet" href="../styles/style.css">
+    </head>
+    <body>
+    <nav class="navbar">
+      
+        <a class='NavItemsRight' href='../index.html'>Home</a></l1>
+        <a class="NavItemsRight" href="../pages/profile.html">Profile</a></l1>
+        <a class="NavItemsRight" href='../pages/projects.html'>Projects</a></li>
+        <a class='NavItemsRight' href='../pages/contact.html'>Contact</a></li>
+      
     </nav>
-  <header>
-    <h1>Projects</h1>
-  </header>
 
-  <section id="achievements">
-    <h2>Achievements</h2>
-    <ul>
-      <!-- <li>Hackathon Winner, IEEE CodeSprint</li> -->
-    </ul>
-  </section>
+    <div class="hero1">
+        <h1 class="hero-main1">Hero Section</h1>
+    </div>
 
+    <div class="hero2">
+        <h1 class="hero-main2">Second Hero Section</h1>
+    </div>
 
-  <footer>
-    <p> Joel Philip Binoy • 2025 • Kochi</p>
-  </footer>
-
-</body>
+    </body>
 </html>
