--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,63 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="../styles/style.css" />
-  <title>Projects</title>
-  
-</head>
-<body>
-    <nav class="navabar">
-      <ul class="Links">
-        <l1><a href='../index.html'>Home</a></l1>
-        <l1><a href="../pages/profile.html">Profile</a></l1>
-        <li><a href='../pages/projects.html'>Projects</a></li>
-        <li><a href='../pages\contact.html'>Contact</a></li>
-      </ul>
+<html>
+    <head>
+        <title>LampPost</title>
+        <script src="../scripts/script.js"></script>
+        <link rel="stylesheet" href="../styles/style.css">
+    </head>
+    <body>
+    <nav class="navbar">
+      
+        <a class='NavItemsRight' href='../index.html'>Home</a></l1>
+        <a class="NavItemsRight" href="../pages/profile.html">Profile</a></l1>
+        <a class="NavItemsRight" href='../pages/projects.html'>Projects</a></li>
+        <a class='NavItemsRight' href='../pages/contact.html'>Contact</a></li>
+      
     </nav>
-  <header>
-    <h1>Projects</h1>
-  </header>
 
-
-  
-
-  <section id="education">
-    <h2>Education</h2>
-    <p></p>
-  </section>
-
- <!-- <section id="experience">
-    <h2>Experience</h2>
-    <div class="job">
-      <h3> Job Title at Company </h3>
-      <p> Timeline & brief description of your responsibilities or accomplishments </p>
+    <div class="hero1">
+        <h1 class="hero-main1">Hero Section</h1>
     </div>
-    Duplicate .job for additional roles 
-  </section>-->
 
-
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3><!-- Project Title --></h3>
-      <p><!-- Short description of the project and technologies used. --></p>
-      <a href="#"><!-- Link to demo or GitHub --></a>
+    <div class="hero2">
+        <h1 class="hero-main2">Second Hero Section</h1>
     </div>
-    <!-- Add more .project blocks as desired -->
-  </section>
 
- 
-
-  
-
-  
-
-  <footer>
-    <p>Joel Philip Binoy • 2025 • Kochi</p>
-  </footer>
-
-</body>
+    </body>
 </html>
