--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>LampPost</title>
         <script src="../scripts/script.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/style.css?v=2">
     </head>
     <body>
     <nav class="navbar">
@@ -58,4 +58,5 @@
   
 
     </body>
+
 </html>
