--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>LampPost</title>
+        <title>Home</title>
         <script src="../scripts/script.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css?v=2">
@@ -60,3 +60,4 @@
     </body>
 
 </html>
+
