--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="NavItemsRight" href='../pages/projects.html'>Projects</a>
        
         <div class="IconsRight">
-            <a class='Icons' href=""><img src='/images/linkedin.png'></a>
+            <a class='Icons' href="https://www.linkedin.com/in/joel-binoy-348324286/"><img src='/images/linkedin.png'></a>
             <a class='Icons' href="/pages/contact.html"><img src='/images/email.png'></a>
         </div>
         <a href="pages/weather_web.html">
@@ -32,11 +32,22 @@
              </div>
         </div>
         <div class="hero-column2">
-            <h1>Images here</h1>
+             <div class="slideshow">
+            <img src="images/slides/img-4.jpg" class="slide active" alt="Slide 1">
+            <img src="images/slides/img-2.jpg" class="slide" alt="Slide 2">
+            <img src="images/slides/img-3.JPG" class="slide" alt="Slide 3">
+            <!-- Add more images as needed -->
+        </div>
+        <div class="dots">
+            <span class="dot active" data-index="0"></span>
+            <span class="dot" data-index="1"></span>
+            <span class="dot" data-index="2"></span>
+            <!-- Add more dots as needed -->
+        </div>
         </div>
     </div>
     <div class="secondhero">
-        <h1 class="hero-main2">Want to know about Artificial Intelligence?</h1>
+        <h1 class="hero-main2">Want to know about AI and Robotics?</h1>
      
         <div class="article-contents">
             <div id="news-2">
