--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
         <div class="hero-column2">
              <div class="slideshow">
-            <img src="images/slides/img-4.jpg" class="slide active" alt="Slide 1">
-            <img src="images/slides/img-2.jpg" class="slide" alt="Slide 2">
-            <img src="images/slides/img-3.JPG" class="slide" alt="Slide 3">
+            <img src="images/slides/img-4.JPG" class="slide active" alt="Image Not Available">
+            <img src="images/slides/img-2.jpg" class="slide" alt="Image Not Available">
+            <img src="images/slides/img-3.JPG" class="slide" alt="Image Not Available3">
             <!-- Add more images as needed -->
         </div>
         <div class="dots">
@@ -67,4 +67,5 @@
   
 
     </body>
+
 </html>
