--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Home</title>
-        <script src="../scripts/script.js"></script>
+        <script src="scripts/script.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
+        <meta name="description" content="An mediocre portfolio website made by a kid.">
+        <meta name="keywords" content="joel,joelphilip,joelmammoodan,RSET">
+        <meta name="author" content="Joel Philip Binoy">
+
     </head>
     <body>
     <nav class="navbar">
@@ -17,7 +22,7 @@
             <a class='Icons' href="https://www.linkedin.com/in/joel-binoy-348324286/"><img src='/images/linkedin.png'></a>
             <a class='Icons' href="/pages/contact.html"><img src='/images/email.png'></a>
         </div>
-        <a href="pages/weather_web.html">
+        <a href="pages/weather_web.html" class="weather-link">
             <div class="weather-info" id="weather">
                 <p>Loading..</p>
             </div>
@@ -28,14 +33,16 @@
         <div class="hero-column1">
             <h1 class="hero-main1" id="greetings">I'm Joel Binoy</h1>
             <div class="hero-contents">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>A young aspiring student studying under B.Tech Degree on AI and Data Science at Rajagiri School Of Engineering and Technology.
+                    Even thought my main focus is on AI models, I have also ventured in Robotics,Mobile App Development and in IOT.I am from Kollam,Kerala,India. But I was born and brought up in Kuwait. 
+                </p>
              </div>
         </div>
         <div class="hero-column2">
              <div class="slideshow">
-            <img src="images/slides/img-4.JPG" class="slide active" alt="Image Not Available">
-            <img src="images/slides/img-2.jpg" class="slide" alt="Image Not Available">
-            <img src="images/slides/img-3.JPG" class="slide" alt="Image Not Available3">
+            <img src="images/slides/img-4.JPG" class="slide active" alt="Image Not available">
+            <img src="images/slides/img-2.jpg" class="slide" alt="Image Not available">
+            <img src="images/slides/img-3.JPG" class="slide" alt="Image Not available">
             <!-- Add more images as needed -->
         </div>
         <div class="dots">
@@ -46,6 +53,7 @@
         </div>
         </div>
     </div>
+   
     <div class="secondhero">
         <h1 class="hero-main2">Want to know about AI and Robotics?</h1>
      
@@ -65,8 +73,5 @@
         <p class="footer_p">Joel Philip Binoy . RSET Kochi . 15/8/2025</p>
     </footer>
   
-
     </body>
-
 </html>
-
