--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,25 +29,30 @@
     <div class="Project">
         <h1 class="project-heading">Projects</h1>
         <div class="project-items">
-            <a href=''><h1>Project1</h1></a>
-            <p class="project-contents">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href='https://github.com/joelmammoodan/Banshee'><h1>Banshee</h1></a>
+            <p class="project-contents">An overglorified alarm clock system with physical switches and huge sirens to wake up sound sleepers,hence banshee.It is made using ESP32 and other sensors to accomodate different scenarios. Also there are future projects on adding radio modules and also surveillance system to monitor any crime in front of it and activate the siren, hence Banshee</p>
 
         </div>
         <div class="project-items">
-                <a href=''><h1>Project2</h1></a>
-                <p class="project-contents">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href='https://github.com/joelmammoodan/-never-Hangman-problem'><h1>Hangman Problem</h1></a>
+                <p class="project-contents">This is a small project to basically solve every hangam game there is. It uses DFS search to find a soltuion and plays it.However it cannot be used in real life since irl you cannot move back a step.</p>
 
             </div>
         <div class="project-items">
-                <a href=''><h1>Project3</h1></a>
-                <p class="project-contents">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href='https://github.com/joelmammoodan/readie-speakie'><h1>Readie-speakie</h1></a>
+                <p class="project-contents">Basically a small test project on learning chatbots and by giving it a document it can give a summary on it</p>
 
             </div>
         <div class="project-items">
-                <a href=''><h1>Project4</h1></a>
-                <p class="project-contents">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href='https://github.com/joelmammoodan/kinematics'><h1>SCARA-Kinematics</h1></a>
+                <p class="project-contents">A python program to perform forward and inverse kinematics based on a 2DOF SCARA arm. it can give the values to be inputted to the servo motors to move to the cartesian points of given. </p>
 
-            </div>
+         </div>
+         <div class="project-items">
+                <a href='https://github.com/joelmammoodan/Person_detection'><h1>Person Detection</h1></a>
+                <p class="project-contents">A python program to detect people from a surveillance system using YOLO model v8. It can take input of a camera feed and if there is any person in it, it can send the image to the required email. Tried custom training it and almost crashed my laptop(tip:use colab or kaggle) </p>
+
+         </div>
     </div>
 
     
