--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Me</title>
+        <title>Contact</title>
         <script src="../scripts/script.js"></script>
         <link rel="stylesheet" href="../styles/style.css">
     </head>
@@ -29,18 +29,12 @@
   <!-- Contact Details -->
   <div class="contact-info" >
     <h2>Contact Details</h2>
-    <p><strong>Name:</strong> Joel Binoy</p>
-    <p><strong>Email:</strong> joel@example.com</p>
-    <p><strong>Phone:</strong> +91 1234567890</p>
-    <p><strong>Address:</strong> 123 Main Street, Your City, Your Country</p>
+    <p><strong>Name:</strong> Joel Philip Binoy</p>
+    <p><strong>Email:</strong> u2308037@rajagiri.edu.in</p>
+    <p><strong>Address:</strong>Sanjoe2 Men's Hostel, Rajagiri Valley, Kakkanad, Kochi</p>
 
     <!-- Embedded Map iframe -->
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019937651648!2d-122.41941548468154!3d37.77492977975957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064c8f6c001%3A0x9c2e0b7e8e2b9b85!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1691982367000!5m2!1sen!2sus" 
-      allowfullscreen="" 
-      loading="lazy" 
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3555.7870078272363!2d76.35752447450844!3d9.994330673133291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080ca12373ff23%3A0xf4700623b5e399b6!2sSanjoe%202%20Men&#39;s%20Hostel!5e1!3m2!1sen!2sin!4v1755358442834!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 
 
