--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
         <div class="hero-column2">
              <div class="slideshow">
-            <img src="images/slides/img-4.JPG" class="slide active" alt="Image Not available">
-            <img src="images/slides/img-2.jpg" class="slide" alt="Image Not available">
-            <img src="images/slides/img-3.JPG" class="slide" alt="Image Not available">
+            <img src="images/slides/img-4.webp" class="slide active" alt="Image Not available">
+            <img src="images/slides/img-2.webp" class="slide" alt="Image Not available">
+            <img src="images/slides/img-3.webp" class="slide" alt="Image Not available">
             <!-- Add more images as needed -->
         </div>
         <div class="dots">
