--- a/pages/profile.html
+++ b/pages/profile.html
@@ -68,6 +68,11 @@
             
         </div>
         <div class="square" id="android">
+            <img src="../images/technology.png">
+            <p>IOT</p>
+            <p class="square-item">Experimental knowledge on microcontrollers like ESP32 and ESP8266.Has experience on using the Arduino IDE</p>
+        </div>
+        <div class="square" id="android">
             <img src="../images/android-logo.png">
             <p>Android</p>
             <p class="square-item">A Basic knowledge about Android app development using Android Studio</p>
