--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
         <title>Contact</title>
         <script src="../scripts/script.js"></script>
         <link rel="stylesheet" href="../styles/style.css">
+          <link rel="icon" type="image/png" href="../images/jp.png">
     </head>
     <body>
      <nav class="navbar">
