--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,6 +6,7 @@
         <title>Profile</title>
         
         <link rel="stylesheet" href="../styles/style.css">
+          <link rel="icon" type="image/png" href="../images/jp.png">
     </head>
     <body>
     <nav class="navbar">
